# HealthConnect_Application

Backend/: orders.json
Backend/src/: app.js
Backend/src/controllers/: appointment.controllers.js  chat.controllers.js  patient.controllers.js
Backend/src/models/: appointment.models.js
Backend/src/routes/: chat.routes.js  patient.routes.js
Backend/src/utils/: asyncHandler.js
Frontend/: .env.production  index.html  package-lock.json  package.json
Frontend/src/Dashboard/: Appointmenthistory.jsx  Bookappointments.jsx  Booking.jsx  ChatbotWidget.jsx  Historyappointments.jsx  PatientDashboard.jsx  UpcomingBookings.jsx  ViewAppointments.jsx
Frontend/src/Login/: Doctorlogin.jsx  Patientlogin.jsx
Frontend/src/Registration/: Patientregistration.jsx
Python-service/: pyproject.toml  requirements.txt  test_request.json  test_request.ps1
Python-service/app/: config.py  db.py  graph.py  main.py  schemas.py
Python-service/app/tools/: appointment_tools.py  doctor_tools.py
