[project]
name = "python-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=1.1.3",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.65",
    "langgraph-checkpoint-mongodb>=0.2.0",
    "langgraph-store-mongodb>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.7.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]
